--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,55 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+/********************
+PAGE: PORTFOLIO
+*********************/
+
+#gallery {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+#gallery li {
+  float: left;
+  width: 45%;
+  margin: 2.5%;
+  background-color: #f5f5f5;
+  color: #bdc3c7;
+}
+
+/********************
+COLORS
+*********************/
+
+/* site body */
+body {
+  background-color: #fff;
+  color: #999;
+}
+/* green header */
+header {
+  background: #6ab47b;
+  border-color: #599a68;
+}
+/* nav background on mobile */
+nav {
+  background: #599a68;
+}
+/* logo text */
+h1, h2 {
+  color: #fff;
+}
+a { 
+  color: #6ab47b;
+}
+/* nav linl */
+nav a, nav a:visited {
+  color: #fff;
+}
+/* selected nav link */
+nav a.selected, nav a:hover{
+  color: #32673f;
+}
